--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ jobs:
       - checkout
       - restore_cache:
           key: dependency-cache-{{ checksum "go.sum" }}
-      - run: golint -set_exit_status ./...
+      - run: go get golang.org/x/lint/golint
+      - run: /go/bin/golint -set_exit_status ./...
       - run: go build -o /tmp/kcrawler ./cmd/kcrawler
       - run: go vet ./...
       - run: go test -race -v ./...
